# deng-ai-team-1

./: .gitignore  LICENSE  README.md  pyproject.toml
jeanne/: baseline.ipynb  decomposition.py  exploration.ipynb  lstm_oliver_features.py  optuna_experiment_shorter_feature_set.py  optuna_experiment_template.py  optuna_forecasting.db  pca_features.py  submission_prediction.csv
jeanne/codecarbon_logs/: random_forest_forecasting_mse_iq_none_trial_0_emissions.csv  random_forest_forecasting_mse_iq_none_trial_10_emissions.csv  random_forest_forecasting_mse_iq_none_trial_11_emissions.csv  random_forest_forecasting_mse_iq_none_trial_12_emissions.csv  random_forest_forecasting_mse_iq_none_trial_13_emissions.csv  random_forest_forecasting_mse_iq_none_trial_14_emissions.csv  random_forest_forecasting_mse_iq_none_trial_15_emissions.csv  random_forest_forecasting_mse_iq_none_trial_16_emissions.csv  random_forest_forecasting_mse_iq_none_trial_17_emissions.csv  random_forest_forecasting_mse_iq_none_trial_18_emissions.csv  random_forest_forecasting_mse_iq_none_trial_19_emissions.csv  (+713 more)
matthias/: data_exploration.ipynb  deng_transform.py  evaluate.py  main.py  models.py  preprocess.py  sarimax.py  sarimax_seasonal.py
oliver/: PIPELINE.md  analysis_outline.py  insights_summary.md  lag_rolling_features_individual.py  lagged_features.py  lagged_features_monthly.py  main.py  main_additional_diff.py  main_informed.py  main_reduced_additional_diff.py  main_reduced_features.py  main_rf.py  rolling_features.py  rolling_features_monthly.py  visualization.py
oliver/diagnostic/: README.md  (+3 more)
(+362 files in other folders)
