[project]
name = "deng-ai-team-1"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "lightgbm",
    "numpy",
    "optuna",
    "pandas",
    "scikit-learn",
    "statsmodels",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
